# watershed-retrieve

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  init.sh  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: convert_to_parquet.py  generate_outlets_toml.py
src/watershed_retrieve/: __init__.py  _api.py  _errors.py  _registry.py  _store.py  _types.py
tests/: conftest.py  test_api_unit.py  test_catalog.py  test_configure.py  test_helpers.py  test_local_store.py  test_r2_store.py  test_registry.py  test_retrieve.py  test_types.py
