[project]
name = "watershed-retrieve"
version = "1.0.0"
description = "Pre-delineated MERIT-Hydro watershed boundaries for ~60,000 gauging stations across 16 countries"
readme = "README.md"
authors = [{ name = "Nicolas Lazaro", email = "nlazaro@ethz.ch" }]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Typing :: Typed",
]
keywords = ["hydrology", "watershed", "MERIT-Hydro", "GeoParquet", "geopandas", "delineation", "catchment"]
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.3",
    "pyarrow>=23.0.1",
    "fsspec[http]>=2024.1.0",
]

[project.urls]
Homepage = "https://github.com/CooperBigFoot/watershed-retrieve"
Repository = "https://github.com/CooperBigFoot/watershed-retrieve"
Issues = "https://github.com/CooperBigFoot/watershed-retrieve/issues"


[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.3",       # tests
    "pytest-cov>=6.2.1",
    "ruff>=0.12",        # linter + formatter
    "bump-my-version>=1.2.7",
]

# -----------------------
# Ruff (lint + format)
# -----------------------
[tool.ruff]
line-length = 120
target-version = "py313"
# extend-exclude = ["notebooks/", "experiments/"]

[tool.ruff.lint]
# Errors, warnings, naming, imports, modern py, bugbear, comprehensions, simplify
select = ["E", "F", "W", "N", "I", "UP", "B", "C4", "SIM"]
ignore = [
    "E501", # let formatter handle wrapping
    "N803", # allow X, Y for ML-style params
    "N806", # allow X, Y for local vars
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# # -----------------------
# # ty (fast static type checker)
# # -----------------------
# [tool.ty]
# [tool.ty.rules]
# possibly-unresolved-reference = "warn"

# -----------------------
# Pytest
# -----------------------
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--strict-config", "-ra"]
markers = [
    "integration: marks tests that read real parquet data",
    "network: marks tests that require network access to R2",
]

# -----------------------
# Bump My Version
# -----------------------
[tool.bumpversion]
current_version = "1.0.0"
commit = false
tag = false
allow_dirty = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/watershed_retrieve/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.uv.sources]
# ctrl-freak = { git = "https://github.com/hydrosolutions/ctrl-freak.git", rev = "main" } # example of how to add a git dependency
